<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nicholaswatson.swimracer.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView" />
    <ImageView
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:src="@drawable/dolphin"
        android:layout_gravity="top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:text="@string/showTimeStr"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/butterFlyButtonStr"
        android:id="@+id/butterFlyButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickShowTimes"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/backStrokeButtonStr"
        android:id="@+id/backStrokeButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickShowTimes"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/breastStrokeButtonStr"
        android:id="@+id/breastStrokeButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickShowTimes"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/freeStyleButtonStr"
        android:id="@+id/freeStyleButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickShowTimes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/newTimeStr"
        android:id="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/newTimeButtonStr"
        android:id="@+id/newTimeButton"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
